--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@mui/styled-engine": "^6.4.2",
+    "mongoose": "^8.10.1",
     "next": "15.1.6",
     "next-intl": "^3.26.3",
     "react": "^19.0.0",
