--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@mui/styled-engine": "^6.4.2",
+    "bcryptjs": "^3.0.0",
+    "iron-session": "^8.0.4",
     "mongoose": "^8.10.1",
     "next": "15.1.6",
     "next-intl": "^3.26.3",
@@ -22,6 +24,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
